# ficture-rs

./: Cargo.toml  README.md
examples/: biomes.rs
examples/biomes/: biomes.rs  config.yaml
src/: args.rs  cell.rs  color.rs  config.rs  image.rs  lib.rs  main.rs  map.rs  noise.rs  utils.rs
src/cmd/: args.rs  main.rs
src/lib/: cell.rs  color.rs  config.rs  image.rs  lib.rs  map.rs  noise.rs
