[package]
name = "ficture-generator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ficture-generator"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colorgrad = "0.6.2"
image = "0.24.6"
lazy_static = "1.4.0"
noise = "0.8.2"
rayon = "1.7.0"
