[package]
name = "ficture-generator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/lib.rs"
name = "ficture"

[[bin]]
path = "src/cmd/main.rs"
name = "ficture-generator"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colorgrad = "0.6.2"
image = "0.24.6"
noise = "0.8.2"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"

[[example]]
name = "biomes"
path = "examples/biomes/biomes.rs"
